Add cross-navigation links between all Chocotone web pages

--- a/chocotone_midi_editor.html
+++ b/chocotone_midi_editor.html
@@ -2008,6 +2008,20 @@
             };
         })();
     </script>
+
+    <!-- FOOTER -->
+    <footer
+        style="text-align: center; padding: 20px; margin-top: 40px; border-top: 1px solid var(--brd); color: #555; font-size: 0.8rem;">
+        <p style="margin-bottom: 8px;">
+            <a href="web_tools/installer.html" style="color: var(--acc); text-decoration: none; margin: 0 10px;">🚀
+                Installer</a> ·
+            <a href="presentation.html" style="color: var(--acc); text-decoration: none; margin: 0 10px;">🎮 Virtual
+                Chocotone</a> ·
+            <a href="https://github.com/solispensa/Chocotone" target="_blank"
+                style="color: var(--acc); text-decoration: none; margin: 0 10px;">📦 GitHub</a>
+        </p>
+        <p>Made with ❤️ for the MIDI community</p>
+    </footer>
 </body>
 
 </html>
