--- a/presentation.html
+++ b/presentation.html
@@ -6967,6 +6967,14 @@
     </section>
 
     <footer>
+        <p style="margin-bottom: 12px;">
+            <a href="web_tools/installer.html"
+                style="color: var(--brand-lavender); text-decoration: none; margin: 0 10px;">🚀 Installer</a> ·
+            <a href="chocotone_midi_editor.html"
+                style="color: var(--brand-lavender); text-decoration: none; margin: 0 10px;">📝 Editor</a> ·
+            <a href="https://github.com/solispensa/Chocotone" target="_blank"
+                style="color: var(--brand-lavender); text-decoration: none; margin: 0 10px;">📦 GitHub</a>
+        </p>
         <p>Chocotone MIDI Controller &copy; 2025</p>
     </footer>
 </body>
