--- a/web_tools/installer.html
+++ b/web_tools/installer.html
@@ -579,7 +579,11 @@
         <!-- FOOTER -->
         <footer class="footer">
             <p>
-                <a href="https://github.com/solispensa/Chocotone" target="_blank">GitHub</a> ·
+                <a href="../chocotone_midi_editor.html">📝 Editor</a> ·
+                <a href="../presentation.html">🎮 Virtual Chocotone</a> ·
+                <a href="https://github.com/solispensa/Chocotone" target="_blank">📦 GitHub</a>
+            </p>
+            <p style="margin-top: 8px; font-size: 0.7rem;">
                 <a href="../docs/BEGINNER_GUIDE.md" target="_blank">Beginner's Guide</a> ·
                 <a href="https://www.facebook.com/groups/1950814575859830/" target="_blank">Community</a>
             </p>
