Fix Analog Debug logic, update editor titles, fix compilation error

--- a/chocotone_midi_editor.html
+++ b/chocotone_midi_editor.html
@@ -487,6 +487,9 @@
             <span class="logo-part-1">CHOCO</span><span class="logo-part-2">TONE</span>
         </h1>
         <div class="logo-subline">OPEN MIDI CONTROLLER</div>
+        <div style="font-size:14px;color:#8ffdff;margin-top:5px">Editor v1.4 - <a
+                href="chocotone_midi_editor_v1.5_beta.html"
+                style="color:#8c81df;text-decoration:none;font-weight:bold">Try v1.5b!</a></div>
     </div>
 
     <div id="app"></div>
